[gd_scene load_steps=2 format=3 uid="uid://cyfh75665t8ly"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_55ogc"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_55ogc")

[node name="lbl_hp" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "HP: "

[node name="lbl_power" type="Label" parent="."]
layout_mode = 0
offset_top = 26.0
offset_right = 40.0
offset_bottom = 49.0
text = "Power: "

[node name="lbl_speed" type="Label" parent="."]
layout_mode = 0
offset_top = 50.0
offset_right = 58.0
offset_bottom = 73.0
text = "Speed: "

[node name="lbl_aspd" type="Label" parent="."]
layout_mode = 0
offset_top = 74.0
offset_right = 58.0
offset_bottom = 97.0
text = "ASPD: "
